# sports-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
sport/: settings.py  urls.py
sports/: settings.py  urls.py
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_rename_user_id_profile_user.py
