[tool.poetry]
name = "sports-backend"
version = "0.1.0"
description = ""
authors = ["jeison <jeisonnoc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.13.1"
djongo = "1.3.6"
pymongo = "3.12.3"
Django = "3.2.15"
djangorestframework-jwt = "^1.11.0"
djangorestframework-simplejwt = "^5.2.0"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
